creusot/tests/should_fail/prusti/deref/box2.stderr
error[creusot]: invalid box dereference of expression with home `'old` at time-slice `'curr`
 --> box2.rs:4:21
  |
4 | #[ensures(result == x.0)]
  |                     ^

error: aborting due to previous error

